# Commayte

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: _config.yml  index.html  script.js  styles.css
scripts/: build.sh  install.sh  uninstall.sh
src/: ai.rs  client.rs  config.rs  git.rs  main.rs  project.rs  prompts.rs  system.rs  terminal.rs  update.rs
