[package]
name = "Commayte"
version = "0.1.0"
edition = "2021"
authors = ["Aymen Hamada <aymen.hamada@epitech.eu>"]
description = "AI-powered git commit message generator with interactive CLI"
license = "MIT"
repository = "https://github.com/aymenhamada/Commayte"
keywords = ["git", "commit", "ai", "cli", "conventional-commits"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
llama_cpp = "0.3"               # For loading and running the TinyLLaMA model
anyhow = "1.0"                  # For error handling
tokio = { version = "1", features = ["full"] }  # Async runtime for axum server
axum = "0.6"                   # Web framework for server API
serde = { version = "1.0", features = ["derive"] }   # Serialization/deserialization
serde_json = "1.0"             # JSON serialization/deserialization
reqwest = { version = "0.11", features = ["blocking", "json"] }  # HTTP client for CLI sync requests
spinners = "4.1"               # For fancy loading spinners
dialoguer = "0.11"             # For interactive prompts and confirmations
colored = "2.0"                # For colored terminal output
console = "0.15"               # For terminal styling

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "commayte"
path = "src/main.rs"