[package]
name = "Commayte"
version = "1.5.0"
edition = "2021"
authors = ["Aymen Hamada <aymen.hamada@epitech.eu>"]
description = "AI-powered git commit message generator with interactive CLI"
license = "MIT"
repository = "https://github.com/aymenhamada/Commayte"
keywords = ["git", "commit", "ai", "cli", "conventional-commits"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"                  # For error handling
serde = { version = "1.0", features = ["derive"] }   # Serialization/deserialization
serde_json = "1.0"             # JSON serialization/deserialization
reqwest = { version = "0.11", features = ["blocking", "json"] }  # HTTP client for CLI sync requests
spinners = "4.1"               # For fancy loading spinners
dialoguer = "0.11"             # For interactive prompts and confirmations
colored = "2.0"                # For colored terminal output
console = "0.15"               # For terminal styling
crossterm = "0.27"             # For terminal control and cursor manipulation
toml = "0.8"                   # For configuration file format
dirs = "5.0"                   # For finding config directories
num_cpus = "1.16"              # For getting CPU core count
clap = { version = "4.0", features = ["derive"] }  # CLI argument parsing
semver = "1.0"                 # Semantic versioning for update checks
flate2 = "1.0"                 # For tar.gz extraction
tar = "0.4"                    # For tar archive handling
lazy_static = "1.4"            # For static initialization
unicode-segmentation = "1.10"
unicode-width = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "commayte"
path = "src/main.rs"